# KTP_Project

./: .gitignore  BYS_Model_List.csv  KTP.xml  README.md  app.py  fancy.html  get_together.html  kb.pl  main.py  party.html  prolog_util.py  pyproject.toml  requirements.txt  results_script.js  style.css  survey.html
backend/: prolog_util.py
backend/db/: combined.pl  kb.pl  sort_kb.py
backend/db/sub_dbs/: 1_dish.pl  2_event_type.pl  3_season.pl  4_location.pl  5_time.pl  6_children.pl  7_restrictions.pl  8_cuisine.pl  cuisine.pl  dish.pl  event_type.pl  location.pl  restrictions.pl  season.pl
frontend/: fancy.html  get_together.html  party.html  results_script.js  style.css  survey.html  survey_script.js
