[tool.poetry]
name = "ktp_project"
version = "0.1.0"
description = ""
authors = ["AtakanTekparmak <atakantekerparmak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.1"
pyswip = "^0.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
